--- a/src/pages/dashboard/dashboard.scss
+++ b/src/pages/dashboard/dashboard.scss
@@ -63,7 +63,29 @@ page-dashboard {
         }
     }
     
-    
+    .cs-btn {
+        background: #f52702 !important;
+        width: 100%;
+        position: relative !important;
+        left: 0 !important;
+        margin: 0 !important;
+        height: 30px !important;
+        bottom: 0px !important;
+        span {
+            font-size: 15px;
+            line-height: 22px;
+            letter-spacing: 1px;
+            font-weight: normal;
+        }
+        &.re-btn {
+            background: #f52702 !important;
+            width: 100%;
+            height: 36px !important;
+            margin-bottom: 43px !important;
+            letter-spacing: 1px;
+            line-height: 41px;
+        }
+    }
     .dtbtns{padding: 16px 16px 0px 16px;}
     
     
