--- a/src/pages/expense-popover/expense-popover.scss
+++ b/src/pages/expense-popover/expense-popover.scss
@@ -1,4 +1,30 @@
 page-expense-popover {
+
+    .head{
+        display: flex;
+        justify-content: space-between;
+        padding: 8px;
+        align-items: center;
+        background-color: rgba(3, 172, 229, 0.1);
+        span{
+            font-weight: 400;
+        }
+    }
+    
+    .close{
+        i{
+            font-size: 16px;
+        }
+    }
+
+    .edit{
+        padding: 0 10px 10px 10px;
+        h1{
+            padding-top: 0 !important;
+        }
+       
+    }
+
     ion-list
     {
         &.popover_list
