--- a/src/pages/sales-app/new-lead/lms-lead-detail/lms-lead-detail.scss
+++ b/src/pages/sales-app/new-lead/lms-lead-detail/lms-lead-detail.scss
@@ -1,3 +1,21 @@
 page-lms-lead-detail {
-
+    .contentBox{
+        display: flex;
+        justify-content: space-between;
+        .lower{
+            &:nth-child(2){
+                margin-left: 8px;
+            }
+        }
+    }
+    .lower{
+        width: 100%;
+    margin-top: 10px;
+    padding: 4px;
+    border-radius: 5px;
+    box-shadow: 0 0 5px 0px rgba(0, 0, 0, .1);
+    }
+    .upload-doc{
+        padding: 10px;
+    }
 }
