--- a/src/pages/sales-app/end-checkin/end-checkin.scss
+++ b/src/pages/sales-app/end-checkin/end-checkin.scss
@@ -1,3 +1,13 @@
 page-end-checkin {
+  ion-select {
+    border: 0px;
+    padding: 0px 8px 0px 16px;
+    .width {
+        font-size: 13px;
+        color: #000000 !important;
+        line-height: 18px;
+        width: 130%;
+    }
+}
 
 }
