--- a/src/pages/sales-app/new-lead/lms-lead-list/lms-lead-list.scss
+++ b/src/pages/sales-app/new-lead/lms-lead-list/lms-lead-list.scss
@@ -1,3 +1,18 @@
 page-lms-lead-list {
 
+  .count{
+    font-size: 12px;
+    background: #a7a7a7;
+    color: rgb(255, 255, 255);
+    border-radius: 5px;
+    text-align: center;
+    margin-left: 0px;
+    min-width: 15px;
+    height: 21px;
+    background: #ccc;
+    width: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
 }
